// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WidgetCustomRedirectionLinks/> render() should render all the links with the \`Add Redirection Link\` button and without a \`SHOW MORE\` link (isEditing=true) 1`] = `
<Fragment>
  <div>
    <ListGroup
      flush={true}
      horizontal={false}
      tag="ul"
    >
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
    </ListGroup>
  </div>
  <Button
    color="secondary"
    id="redirection-link-button-0templatewidgets1"
    tag="button"
    type="button"
  >
    <i
      className="material-icons mr-2"
    >
      add
    </i>
    Add Redirection Link
  </Button>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="redirection-link-button-0templatewidgets1"
    toggle={[Function]}
    trigger="click"
  >
    <PopoverBody
      tag="div"
    >
      <InputField
        label="Title"
        name="redirectionLink.title"
        onChange={[Function]}
        placeholder="My link"
        type="text"
      />
      <InputField
        label="Link"
        name="redirectionLink.url"
        onChange={[Function]}
        placeholder="https://www.gorgias.com"
        type="text"
      />
      <div>
        <Button
          className="mr-2"
          color="primary"
          disabled={true}
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Submit
        </Button>
        <Button
          color="secondary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Cancel
        </Button>
      </div>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`<WidgetCustomRedirectionLinks/> render() should render all the links with the \`Add Redirection Link\` button and without a \`SHOW MORE\` link (isEditing=true) 2`] = `
<Fragment>
  <div>
    <ListGroup
      flush={true}
      horizontal={false}
      tag="ul"
    >
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
    </ListGroup>
  </div>
  <Button
    color="secondary"
    id="redirection-link-button-0templatewidgets1"
    tag="button"
    type="button"
  >
    <i
      className="material-icons mr-2"
    >
      add
    </i>
    Add Redirection Link
  </Button>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="redirection-link-button-0templatewidgets1"
    toggle={[Function]}
    trigger="click"
  >
    <PopoverBody
      tag="div"
    >
      <InputField
        label="Title"
        name="redirectionLink.title"
        onChange={[Function]}
        placeholder="My link"
        type="text"
      />
      <InputField
        label="Link"
        name="redirectionLink.url"
        onChange={[Function]}
        placeholder="https://www.gorgias.com"
        type="text"
      />
      <div>
        <Button
          className="mr-2"
          color="primary"
          disabled={true}
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Submit
        </Button>
        <Button
          color="secondary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Cancel
        </Button>
      </div>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`<WidgetCustomRedirectionLinks/> render() should render all the links without the \`Add Redirection Link\` button and without a \`SHOW MORE\` link (isEditing=false) 1`] = `
<Fragment>
  <div>
    <ListGroup
      flush={true}
      horizontal={false}
      tag="ul"
    >
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
    </ListGroup>
  </div>
</Fragment>
`;

exports[`<WidgetCustomRedirectionLinks/> render() should render an \`Add Redirection Link\` Button and the Link editor popover 1`] = `
<Fragment>
  <div>
    <ListGroup
      flush={true}
      horizontal={false}
      tag="ul"
    />
  </div>
  <Button
    color="secondary"
    id="redirection-link-button-0templatewidgets1"
    tag="button"
    type="button"
  >
    <i
      className="material-icons mr-2"
    >
      add
    </i>
    Add Redirection Link
  </Button>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="redirection-link-button-0templatewidgets1"
    toggle={[Function]}
    trigger="click"
  >
    <PopoverBody
      tag="div"
    >
      <InputField
        label="Title"
        name="redirectionLink.title"
        onChange={[Function]}
        placeholder="My link"
        type="text"
      />
      <InputField
        label="Link"
        name="redirectionLink.url"
        onChange={[Function]}
        placeholder="https://www.gorgias.com"
        type="text"
      />
      <div>
        <Button
          className="mr-2"
          color="primary"
          disabled={true}
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Submit
        </Button>
        <Button
          color="secondary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Cancel
        </Button>
      </div>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`<WidgetCustomRedirectionLinks/> render() should render an empty component (not links, no button, no popover) 1`] = `
<Fragment>
  <div>
    <ListGroup
      flush={true}
      horizontal={false}
      tag="ul"
    />
  </div>
</Fragment>
`;

exports[`<WidgetCustomRedirectionLinks/> render() should render some links and a \`SHOW MORE\` link but without an \`Add Redirection Link\` button (isEditing=false) 1`] = `
<Fragment>
  <div>
    <ListGroup
      flush={true}
      horizontal={false}
      tag="ul"
    >
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <ListGroupItem
        className="border-0"
        href="https://www.gorgias.com"
        key="Gorgias"
        rel="noopener noreferrer"
        tag="a"
        target="_blank"
      >
        Gorgias
        <i
          className="material-icons ml-2"
        >
          open_in_new
        </i>
      </ListGroupItem>
      <Collapse
        appear={false}
        enter={true}
        exit={true}
        in={false}
        isOpen={false}
        mountOnEnter={false}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        tag="div"
        timeout={350}
        unmountOnExit={false}
      >
        <ListGroupItem
          className="border-0"
          href="https://www.gorgias.com"
          key="Gorgias"
          rel="noopener noreferrer"
          tag="a"
          target="_blank"
        >
          Gorgias
          <i
            className="material-icons ml-2"
          >
            open_in_new
          </i>
        </ListGroupItem>
      </Collapse>
      <ListGroupItem
        className="border-0"
        href="#"
        onClick={[Function]}
        tag="a"
      >
        <img
          alt="Expand"
          className="mr-2"
          src="test-file-stub"
        />
        SHOW MORE
      </ListGroupItem>
    </ListGroup>
  </div>
</Fragment>
`;
